# drkr

./: .env.example  .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
docs/: DRKR_FILE_FORMAT_SPEC.md  IMPLEMENTATION_PLAN.md  TECH_ARCHITECTURE.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: brush.rs  crop.rs  document.rs  filters.rs  layer.rs  mod.rs
src-tauri/src/engine/: document.rs  history.rs  layer.rs  mod.rs
src-tauri/src/io/: mod.rs
src-tauri/src/io/drkr/: mod.rs  reader.rs  types.rs  writer.rs
src/lib/components/: ColorPicker.svelte  DocumentTabBar.svelte  MenuBar.svelte
src/lib/components/canvas/: Canvas.svelte  ZoomContextMenu.svelte
src/lib/components/dialogs/: NewDocumentDialog.svelte
src/lib/components/panels/: AIPanel.svelte  ColorPanel.svelte  HistoryContent.svelte  LayersPanel.svelte  TabbedOptionsPanel.svelte  ToolOptionsContent.svelte  (+1 more)
src/lib/engine/: brushEngine.ts  cropEngine.ts  eyedropperEngine.ts  filterEngine.ts  moveEngine.ts  selectionEngine.ts  webglFilters.ts  zoomEngine.ts
src/lib/services/: platform-browser.ts  platform-tauri.ts  platform.ts  tauri.ts
src/lib/stores/: ai.ts  crop.ts  document.ts  documents.ts  history.ts  index.ts  preferences.ts  recentFiles.ts  selection.ts  tools.ts  ui.ts
src/lib/types/: ai.ts  document.ts  index.ts  tools.ts
src/lib/utils/: selectionUtils.ts  snapUtils.ts
src/routes/: +page.svelte
(+9 files in other folders)
