[package]
name = "darker"
version = "0.1.0"
description = "A modern, lightweight image editor with generative AI capabilities"
authors = [""]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = { version = "0.24", features = ["webp"] }

# ZIP archive handling (for .drkr format)
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Parallel processing
rayon = "1.8"

# HTTP client (for AI APIs)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Base64 encoding
base64 = "0.21"

# Caching
lru = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
